style (frontend): slicing feature home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/badmin.png" type="image/png" />
     <link
-      rel="shortcut icon"
-      href="../frontend/src/assets/img/soccer-field.webp"
-      type="image/x-icon"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&display=swap"
+      rel="stylesheet"
     />
-    <title>Sewa Lapangan Aja</title>
+    <title>
+      BadmintonKuy: Aplikasi Booking Lapangan & Main Bareng Badminton
+    </title>
   </head>
   <body>
     <div id="app"></div>
